syntax = "proto3";

package canoe;

import "google/api/annotations.proto";

service Canoe {
	rpc CreateTerraformDeploy(CreateTerraformDeployRequest) returns (CreateTerraformDeployResponse) {
		option (google.api.http) = {
			post: "/api/grpc/create_terraform_deploy"
			body: "*"
		};
	}
	rpc CompleteTerraformDeploy(CompleteTerraformDeployRequest) returns (CompleteTerraformDeployResponse) {
		option (google.api.http) = {
			post: "/api/grpc/complete_terraform_deploy"
			body: "*"
		};
	}
}

message CreateTerraformDeployRequest {
	string user_email = 1;
	string branch = 2;
	string commit = 3;
	string estate = 4;
	string terraform_version = 5;
}

message CreateTerraformDeployResponse {
	bool error = 1;
	string message = 2;
	int64 deploy_id = 3;
}

message CompleteTerraformDeployRequest {
	string user_email = 1;
	int64 deploy_id = 2;
	bool successful = 3;
}

message CompleteTerraformDeployResponse {
	bool error = 1;
	string message = 2;
	int64 deploy_id = 3;
}
