syntax = "proto3";

import "operator.proto";

package testing;

option go_package = "operatortesting";

service Pinger {
	rpc Ping(PingRequest) returns (operator.Response);
	rpc PingPong(PingRequest) returns (operator.Response);
}

message PingRequest {
	operator.Request request = 1;
}
